<resources>
    <string name="app_name">Clean Eat</string>
    <string name="action_settings">Settings</string>

    <string name="label_rating">Rating</string>

    <string name="main_search">Search for establishment</string>
    <string name="main_favourites">Favourites</string>

    <string name="favourites_no_items">You don\'t have any favourite establishments!</string>
    <string name="search_no_items">Sorry, we did not find any establishments matching your criteria!</string>

    <string name="favourites_toast_add">Added to favourites!</string>
    <string name="favourites_toast_remove">Removed from favourites!</string>
    <string name="toast_location">Please turn location on and adjust permission!</string>

    <string name="hint_search">Search...</string>
    <string name="radio_relevance">Relevance</string>
    <string name="radio_rating_desc">Rating Desc.</string>
    <string name="radio_rating_asc">Rating Asc.</string>
    <string name="radio_alpha_asc">Alphabetically Asc.</string>
    <string name="radio_alpha_desc">Alphabetically Desc.</string>
    <string name="radio_distance">Distance</string>

    <string name="hint_distance">Any Distance</string>
    <string name="label_business">Business Type</string>
    <string name="label_region">Region</string>
    <string name="label_authority">Authority</string>
    <string name="label_min_rating">Minimum Rating</string>
    <string name="label_max_distance">Maximum Distance in Miles</string>

    <string name="details_label_authority">Local Authority</string>
    <string name="details_label_rating">Rating</string>
    <string name="details_label_rating_date">Date of last inspection</string>
    <string name="details_label_type">Type</string>
    <string name="details_label_address">Address</string>

    <string name="dialog_permission">In order to use the distance features, please allow the application to use your location.</string>
    <string name="dialog_ok">OK</string>

    <string name="sort_description">Sort button</string>
    <string name="filter_description">Filter button</string>

    <string name="option_any">Any</string>
</resources>
