<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/colorPrimaryDark"
    android:padding="5dp"
    tools:context=".SearchActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="horizontal"
            android:paddingBottom="20dp">

            <SearchView
                android:id="@+id/searchBox"
                style="@android:style/Widget.Material.Light.SearchView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/round_border"
                android:backgroundTint="@color/colorBackgroundLight"
                android:iconifiedByDefault="false"
                android:queryHint="Search..."
                android:layout_marginEnd="5dp"
                app:layout_constraintEnd_toStartOf="@+id/sortButton"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageButton
                android:id="@+id/sortButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/round_border"
                android:backgroundTint="@color/colorBackgroundLight"
                android:src="@drawable/ic_sort_black_24dp"
                android:layout_marginEnd="5dp"
                android:onClick="onClickSort"
                app:layout_constraintEnd_toStartOf="@+id/filterButton"
                android:contentDescription="@string/sort_description" />

            <ImageButton
                android:id="@+id/filterButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/round_border"
                android:backgroundTint="@color/colorBackgroundLight"
                android:src="@drawable/ic_tune_black_24dp"
                android:onClick="onClickFilter"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/filter_description" />

            <LinearLayout
                android:id="@+id/sortPanel"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/searchBox"
                android:layout_marginTop="20dp">

                <RadioGroup
                    android:id="@+id/sortGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:checked="true"
                        android:id="@+id/radioRelevance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/round_border"
                        android:backgroundTint="@color/colorBackgroundLight"
                        android:text="@string/radio_relevance"
                        android:textAlignment="center"
                        android:textSize="24sp" />

                    <RadioButton
                        android:id="@+id/radioRatingDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_rating_desc"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/round_border"
                        android:backgroundTint="@color/colorBackgroundLight"
                        android:textAlignment="center"
                        android:textSize="24sp"/>

                    <RadioButton
                        android:id="@+id/radioRatingAsc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_rating_asc"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/round_border"
                        android:backgroundTint="@color/colorBackgroundLight"
                        android:textAlignment="center"
                        android:textSize="24sp"/>

                    <RadioButton
                        android:id="@+id/radioAlphaAsc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_alpha_asc"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/round_border"
                        android:backgroundTint="@color/colorBackgroundLight"
                        android:textAlignment="center"
                        android:textSize="24sp"/>

                    <RadioButton
                        android:id="@+id/radioAlphaDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_alpha_desc"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/round_border"
                        android:backgroundTint="@color/colorBackgroundLight"
                        android:textAlignment="center"
                        android:textSize="24sp"/>

                    <RadioButton
                        android:id="@+id/radioDistance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_distance"
                        android:background="@drawable/round_border"
                        android:backgroundTint="@color/colorBackgroundLight"
                        android:textAlignment="center"
                        android:textSize="24sp"/>
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/filterPanel"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/searchBox"
                android:layout_marginTop="20dp"
                android:padding="5dp"
                android:background="@color/colorBackgroundLight"
                android:divider="?android:listDivider"
                android:showDividers="middle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="@string/label_business"/>

                    <Spinner
                        android:id="@+id/spinnerBusiness"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd">

                    </Spinner>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="@string/label_region"/>

                    <Spinner
                        android:id="@+id/spinnerRegion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd">

                    </Spinner>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="@string/label_authority"/>

                    <Spinner
                        android:id="@+id/spinnerAuthority"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd">

                    </Spinner>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="@string/label_min_rating"/>

                    <Spinner
                        android:id="@+id/spinnerMinRating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd">

                    </Spinner>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:labelFor="@+id/editMiles"
                        android:text="@string/label_max_distance"/>

                    <EditText
                        android:id="@+id/editMiles"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:singleLine="true"
                        android:hint="@string/hint_distance"
                        android:textAlignment="textEnd">

                    </EditText>
                </LinearLayout>

            </LinearLayout>

        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/searchNoItems"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:textSize="20dp"
            android:textAlignment="center"
            android:gravity="center"
            android:background="@color/colorAccent"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/search_no_items"/>

        <ListView
            android:visibility="visible"
            android:id="@+id/establishmentList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:padding="5dp"
            android:divider="@null"
            android:dividerHeight="5dp" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>